# talesd_gnn_reconstruction

./: .buildinfo  .gitignore  README.md  build_extensions.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py  talesd_gnn_config.env.example
_modules/: index.html
_modules/talesd_gnn_reconstruction/: model.html
_sources/en/: cli.rst.txt  (+6 more)
_static/: alabaster.css
configs/: hetero_light_graphability_reference.json  small_tuning_example.json
docs/: server_cpu_dst_export_checklist.md  small_dataset_jupyter_tuning.md  usage_ja.md
en/: cli.html  code_map.html  code_walkthrough.html  hetero_model.html  hetero_workflow.html  index.html  python_api.html  server_workflow.html
ja/: cli.html  code_map.html  code_walkthrough.html  hetero_model.html  hetero_workflow.html  index.html  python_api.html  server_workflow.html
notebooks/: small_dataset_tuning.ipynb
scripts/: audit_homogeneous_input_parity.py  check_precision_targets.py  continue_training_from_checkpoint.py  export_large_graphs.sh  generate_diagnostics_from_checkpoint.py  index_legacy_outputs.py  lib_sweep_progress.sh  make_homogeneous_graph_event_display.py  make_small_graph_dataset.py  migrate_graph_shards_to_run_dir.sh  redraw_split_distribution_plots.py  run_hparam_sweep_existing_graphs.sh  run_hparam_sweep_run_dir.sh  run_mass_12h.sh  run_mass_4h.sh  run_physics_existing_graphs.sh  run_reconstruction_12h.sh  run_server_one_h5_smoke.sh  run_small_tuning.py  run_species_existing_graphs.sh  run_waveform_large_training.sh  slurm_queue_live.sh  slurm_queue_summary.sh  start_server_interactive_gpu.sh  strip_notebook_outputs.py  submit_server_allsrc_homogeneous_hetero_comparison.sh  submit_server_graph_export.sh  submit_server_hetero_balanced_graph_export.sh  submit_server_hetero_dataset_size_sweep.sh  submit_server_hetero_information_flow_ablation.sh  submit_server_hetero_light_graph_export.sh  submit_server_hetero_light_size_sweep.sh  submit_server_hetero_reco_mass_error_training.sh  submit_server_hetero_reco_mass_quality_training.sh  submit_server_hetero_regenerate_diagnostics.sh  submit_server_hetero_reshard.sh  submit_server_hetero_source_balanced_graph_export.sh  submit_server_hetero_source_balanced_size_sweep.sh  submit_server_hetero_speed_benchmark.sh  submit_server_hetero_training.sh  (+12 more)
tests/: test_amp_scatter.py  test_checkpoint_diagnostics.py  test_diagnostics_fit.py  test_event_graph_waveforms.py  test_export_date_filter.py  test_hetero_graph_io.py  test_hetero_training.py  test_homogeneous_graph_display.py  test_homogeneous_input_parity_audit.py  test_homogeneous_schema.py  test_mc_calibration.py  test_metrics.py  test_quality_model.py  test_sampler.py  test_split.py
(+65 files in other folders)
