[project]
name = "talesd-gnn-reconstruction"
version = "0.1.0"
description = "GNN-based reconstruction prototype for TALE-SD events"
readme = "README.md"
authors = [
    { name = "Ichiro Komae", email = "i.komae@cosmicray-ocu.jp" }
]
requires-python = ">=3.14"
dependencies = [
    "dstio",
    "h5py>=3.10",
    "matplotlib>=3.8",
    "numpy>=2.0",
    "pybind11>=3.0.4",
    "scipy>=1.17.1",
    "torch>=2.3",
    "tqdm>=4.66",
]

[project.scripts]
talesd-gnn = "talesd_gnn_reconstruction.cli:main"
talesd-gnn-reconstruction = "talesd_gnn_reconstruction.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel", "pybind11>=3.0.4", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
dstio = { path = "../dstio", editable = true }
